--- a/practise.css
+++ b/practise.css
@@ -85,7 +85,9 @@ body {
   color: white;
   cursor: pointer;
 }
-
+.mic-recording{
+  background: red;
+}
 .controls {
   margin-top: 10px;
 }
@@ -140,7 +142,7 @@ body {
   border-radius: 6px;
   padding: 10px;
   text-align: center;
-  color: #aaa;
+  color: #000000ff;
   font-style: italic;
   margin-bottom: 15px;
 }
